--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                     <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" height="30">
                 </picture>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
