--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             <p class="lead text-justify">
                 Following this defeat, Ulakudaya Perumal and his lineage, including his sister and five brothers (<em>Thampurans</em>/Lords), were exiled. As they traveled and settled in different locations, temples were established in their honor. The primary locations where these temples were built include:
             </p>
-            <ul>
+            <ul class="lead text-justify">
                 <li>Chavara</li>
                 <li>Mullaramkodu</li>
                 <li>Pongummoodu</li>
@@ -104,7 +104,7 @@
             <p class="lead text-justify">
                 The main temples associated with this lineage include:
             </p>
-            <ul>
+            <ul class="lead text-justify">
                 <li>Valiya Melathil Ayani Vilakam Devi Temple</li>
                 <li>Muthana Panayil Temple</li>
                 <li>Perettil Padinjattathil Temple</li>
