--- a/event.html
+++ b/event.html
@@ -55,9 +55,9 @@
     </nav>
 
     <!-- Header -->
-    <header class="bg-light text-center py-5 header-background">
+    <header class="text-white text-center py-5 header-background">
         <div class="container">
-            <h1 class="display-4">Events</h1>
+            <h1 class="display-4 mb-4">Events</h1>
         </div>
     </header>
 
