--- a/upi.html
+++ b/upi.html
@@ -78,9 +78,9 @@
     </nav>
 
     <!-- Header -->
-    <header class="text-center py-5 header-background">
+    <header class="text-white text-center py-5 header-background">
         <div class="container">
-            <h1 class="display-4">Support Us</h1>
+            <h1 class="display-4 mb-4">Offerings</h1>
         </div>
     </header>
 
@@ -126,9 +126,7 @@
                 </div>
             </div>
         </div>
-        <p class="text-center mt-4">
-            <small class="text-muted">Note: UPI payment links work only on mobile devices with a UPI app installed.</small>
-        </p>
+
     </section>
 
     <!-- Footer -->
