--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,9 @@
     </nav>
 
     <!-- Header -->
-    <header class="text-center py-5 header-background">
+    <header class="text-white text-center py-5 header-background">
         <div class="container">
-            <h1 class="display-4">Contact Us</h1>
+            <h1 class="display-4 mb-4">Contact Us</h1>
         </div>
     </header>
 
@@ -84,25 +84,16 @@
                 <div class="contact-divider mx-auto"></div>
             </div>
 
-            <!-- Send Us a Message Form (Right) -->
-            <div class="col-md-6">
-                <h4>Send Us a Message</h4>
-                <form action="#" method="post">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Your Name</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Your Email</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea class="form-control" id="message" name="message" rows="5" placeholder="Write your message here" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
-            </div>
+    <!-- Google Maps Section -->
+    <section class="container py-5">
+        <h2 class="text-center mb-4">Visit Us</h2>
+        <div class="ratio ratio-16x9">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.9469300830674!2d76.73546987934569!3d8.696589999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05e953eca72683%3A0x2e91cb40372340a4!2sViduthi%20Ulakudaya%20Perumal%20Temple!5e0!3m2!1sen!2sin!4v1733594801129!5m2!1sen!2sin"
+                allowfullscreen=""
+                loading="lazy"
+                class="border-0 rounded"
+            ></iframe>
         </div>
     </section>
 
