--- a/upi.html
+++ b/upi.html
@@ -71,7 +71,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="event.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="btn btn-success" href="upi.html">Donate</a></li>
+                    <li class="nav-item"><a class="nav-link" href="upi.html">Offerings</a></li>
                 </ul>
             </div>
         </div>
