--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <!-- Header -->
     <header class="text-white text-center py-5 header-background">
         <div class="container">
-            <h1 class="display-4 mb-4">Ulakudaya Perumal Temple</h1>
+            <h1 class="display-1 mb-4" style="font-weight: 700;">Ulakudaya Perumal Temple</h1>
             <p class="lead mb-4">"A Place of Tranquility and Spiritual Reflection"</p>
-            <a href="about.html" class="btn btn-light text-success">Learn More</a>
+            <a href="about.html" class="btn transparent-btn">Our Heritage</a>
         </div>
     </header>
 
