Modified about page contents including lost details.

--- a/about.html
+++ b/about.html
@@ -233,8 +233,7 @@
     <!-- Hero Header -->
     <header class="header-background">
         <div class="container text-center">
-            <h1 class="mb-3" data-aos="fade-up">Ulakudaya Perumal Temple</h1>
-            <p class="lead" data-aos="fade-up" data-aos-delay="200">A Sacred Legacy of Devotion and History</p>
+            <h1 class="mb-3" data-aos="fade-up">About our temple</h1>
         </div>
     </header>
 
@@ -244,7 +243,10 @@
             <div class="content-card" data-aos="fade-up">
                 <h2 class="text-center">The Sacred Origins</h2>
                 <p class="lead">
-                    The Ulakudaya Perumal Temple, associated with the 'Kuranganthottam' family and the 'Cheruvazha Channanmar', has its roots near the 'Kunnathumala Temple'. This sacred site, known as the <strong>moola sthanam</strong>, lies west of the 'Chengannur Devi Temple' and close to the 'Thiruvandoor' road.
+                    The Ulakudaya Perumal Temple, associated with the 'Kuranganthottam' family and the 'Cheruvazha Channanmar', has its
+                    roots near the 'Kunnathumala Temple', west of the 'Chengannur Devi Temple' and close to the 'Thiruvandoor' road. This
+                    original location is considered its moola sthanam. The Bhadrakali Temple and 'Nagadeva
+                    Sthanam' at this site are part of a very ancient family lineage.
                 </p>
             </div>
         </div>
@@ -255,30 +257,61 @@
     <!-- Historical Timeline -->
     <section class="py-5 bg-light">
         <div class="container">
-            <h2 class="text-center">Historical Journey</h2>
+            <h2 class="text-center">Temple Lineage</h2>
             <div class="timeline-container">
                 <div class="timeline-item" data-aos="fade-up">
                     <div class="content-card">
-                        <h3>Ancient Kingdoms</h3>
-                        <p>The region was divided between Madhura Rajyam and Vaiga Rajyam, leading to frequent conflicts between the two kingdoms.</p>
+                        <h3>Formation of Kingdoms and Temple Destruction</h3>
+                        <p> In ancient times, the region was divided into two kingdoms: Madhura Rajyam and Vaiga Rajyam.
+                            Madhura Rajyam was ruled by the Madhura Raja, a devotee of Shiva.
+                            Vaiga Rajyam was ruled by Ulakudaya Perumal, who worshipped Bhadrakali.
+                            Frequent battles took place between these kingdoms. During one such battle, Ulakudaya Perumal was defeated. The
+                            Madhura Raja, riding an elephant, caused extensive damage to the temple at the 'moola sthanam', including the Devi
+                            Temple's walls.</p>
                     </div>
                 </div>
                 <div class="timeline-item right" data-aos="fade-up">
                     <div class="content-card">
-                        <h3>The Great Battle</h3>
-                        <p>During a significant battle, the Madhura Raja caused extensive damage to the temple at the moola sthanam.</p>
+                        <h3>Exile and Temple Foundations</h3>
+                        <p> After his defeat, Ulakudaya Perumal, along with his sister and five brothers (Thampurans), was exiled. As they
+                            journeyed, they settled in various locations where temples were subsequently established in their honor. These
+                            temples were built at:
+                            <li>
+                                Chavara
+                                Mullaramkodu
+                                Pongummoodu
+                                Venjaramoodu
+                                Mandapakkunnu
+                                Vakkom Daivapura
+                            </li>
+                        </p>
                     </div>
                 </div>
                 <div class="timeline-item" data-aos="fade-up">
                     <div class="content-card">
-                        <h3>Exile and New Beginnings</h3>
-                        <p>Ulakudaya Perumal and his family established new temples across various locations including Chavara, Mullaramkodu, and others.</p>
+                        <h3>Tragedy at Vakkom Daivapura</h3>
+                        <p>
+                            At Vakkom Daivapura, a tragic event unfolded where the five 'Thampurans' were killed in the presence of the
+                            Maraykkanmar. Ulakudaya Perumal and his sister fled further, crossing Vakkom Irangukadavu, and finally rested at
+                            Kallinmoodu Kadappuram. Here, Ulakudaya Perumal's sister married a young man named Ulakan, and their descendants
+                            became known as the Kuranganthottam family.Ulakudaya Perumal, having escaped further conflict with the 'Kadal
+                            Maraykkanmar', is said to have thrust his sword into
+                            the ground at a specific spot and died. His sister's son later built a temple dedicated to Bhadrakali at this very
+                            location, installing her idol.</p>
                     </div>
                 </div>
                 <div class="timeline-item right" data-aos="fade-up">
                     <div class="content-card">
-                        <h3>Vakkom Daivapura</h3>
-                        <p>The tragic events at Vakkom Daivapura led to the establishment of the Bhadrakali Temple.</p>
+                        <h3>Relocation of the Temple</h3>
+                        <p> Later, during the reign of Marthanda Varma Maharaja, when the Varkala canal was being constructed, this temple
+                            became an obstacle.
+                            As a result, the temple was relocated to 'Viduthi Vilakam'. The new temple retained some exquisitely crafted
+                            sections from the original structure, including a beautifully carved 'peedam'.
+                        
+                            From this time onwards, a festival known as the 'Bhadrakali Pooja' and 'Rappada' has been celebrated.
+                            This festival was traditionally led by the Karnavar (elders/heads of the family): Thiruvan, Ulakan, and Kochu
+                            Shankaran Asan, a relative of Sree Narayana Guru.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -290,61 +323,72 @@
     <!-- Associated Temples -->
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center">Sacred Network of Temples</h2>
-            <div class="row">
-                <div class="col-md-6" data-aos="fade-up">
-                    <div class="temple-feature">
-                        <h3>Primary Temples</h3>
-                        <ul class="list-unstyled">
-                            <li>Valiya Melathil Ayani Vilakam Devi Temple</li>
-                            <li>Muthana Panayil Temple</li>
-                            <li>Perettil Padinjattathil Temple</li>
-                            <li>Kollam Vilakam</li>
-                        </ul>
-                    </div>
+            <div class="content-card" data-aos="fade-up">
+                <h2 class="text-center">Associated Temples and Practices</h2>
+                <p class="lead">
+                    The main temples associated with this lineage include:
+                </p>
+                <div class="row">
+                    <div class="col-md-6" data-aos="fade-up">
+                        <div class="temple-feature">
+                            <ul class="list-unstyled">
+                                <li>Valiya Melathil Ayani Vilakam Devi Temple</li>
+                                <li>Muthana Panayil Temple</li>
+                                <li>Perettil Padinjattathil Temple</li>
+                                <li>Kollam Vilakam</li>
+                                <li>Thettikulam Madan Kavu</li>
+                                <li>Pullanikkodu Poykayil</li>
+                                <li>Pillaveedu Annapoorneswari Temple</li>
+                                <li>Karunilakkodu Kuzhivilakom Temple</li>
+                                </ul>
+                                </div>
+                        </div>
                 </div>
-                <div class="col-md-6" data-aos="fade-up">
-                    <div class="temple-feature">
-                        <h3>Associated Shrines</h3>
-                        <ul class="list-unstyled">
-                            <li>Thettikulam Madan Kavu</li>
-                            <li>Pullanikkodu Poykayil</li>
-                            <li>Pillaveedu Annapoorneswari Temple</li>
-                            <li>Karunilakkodu Kuzhivilakom Temple</li>
-                        </ul>
-                    </div>
-                </div>
+                <p class="lead">
+                    A unique aspect of these temples is that although they are all connected to Ulakudaya Perumal, only the
+                    Viduthi
+                    Vilakam Temple has a separate shrine dedicated specifically to him.
+                </p>
             </div>
         </div>
     </section>
 
     <div class="section-divider"></div>
 
+    <!-- Connection to Sree Narayana Guru -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="content-card" data-aos="fade-up">
+                <h2 class="text-center">Connection to Sree Narayana Guru</h2>
+                <p class="lead">
+                    The temple at 'Viduthi Vilakam' was frequently visited by Sree Narayana Guru. His family members,
+                    including his father Madan Asan, his younger brothers Kochandi Vaidyan and Kuttiperumal Vaidyan, and
+                    their sister Kali, were also associated with this place.
+                </p>
+            </div>
+        </div>
+    </section>
+    <div class="section-divider"></div>
     <!-- Spiritual Practices -->
     <section class="py-5 bg-light">
         <div class="container">
-            <h2 class="text-center">Spiritual Traditions</h2>
-            <div class="row">
-                <div class="col-lg-6" data-aos="fade-up">
-                    <div class="content-card">
+            <div class="content-card" data-aos="fade-up">
+                <h2 class="text-center">Spiritual Traditions</h2>
+                <p class="lead">
+                    The temple complex includes an ancient 'sarppakavu' and shrines for sub-deities such as Yogeeswaran,
+                    Brahmarakshas, and Manthramoorthy. Within the 'Chuttambalam', there are shrines for Perumal(Shiva) and Ganapathi.
+                </p>
+                <div class="row">
+                    <div class="col-lg-6" data-aos="fade-up">
                         <h3>Temple Rituals</h3>
-                        <ul class="list-unstyled">
-                            <li>✦ Regular Ayilya Puja</li>
-                            <li>✦ Uruli Kamizhthal offerings</li>
-                            <li>✦ Thottam Pattu performances</li>
-                            <li>✦ Kalam Pooja ceremonies</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-6" data-aos="fade-up">
-                    <div class="content-card">
-                        <h3>Sacred Features</h3>
-                        <ul class="list-unstyled">
-                            <li>✦ Ancient Sarppakavu (serpent grove)</li>
-                            <li>✦ Shrines for Yogeeswaran</li>
-                            <li>✦ Brahmarakshas shrine</li>
-                            <li>✦ Manthramoorthy shrine</li>
-                        </ul>
+                        <div class="temple-feature">
+                            <ul class="list-unstyled">
+                                <li> Regular Ayilya Pooja</li>
+                                <li> Uruli Kamizhthal offerings</li>
+                                <li> Thottam Pattu performances</li>
+                                <li> Kalam Pooja ceremonies</li>
+                                </ul>
+                                </div>
                     </div>
                 </div>
             </div>
