Nav-bar logo alignment changes
Made nav-link status active for all pages.
Fixed padding for container used in nav-bar in mobile screens.
Removed height specification for logo in all pages.

--- a/upi.html
+++ b/upi.html
@@ -59,7 +59,7 @@
             <a class="navbar-brand" href="index.html">
                 <picture>
                     <source srcset="static/images/logo/logo.webp?v=1.0.1" type="image/webp">
-                    <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" height="30">
+                    <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo">
                 </picture>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
@@ -71,7 +71,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="event.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="upi.html">Offerings</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="upi.html">Offerings</a></li>
                 </ul>
             </div>
         </div>
