Animations in about page
Animations made visible to mobile view as well.

--- a/about.html
+++ b/about.html
@@ -371,7 +371,7 @@
         AOS.init({
             duration: 800,
             once: true,
-            disable: 'mobile' // Disable animations on mobile for better performance
+            // disable: 'mobile' // Commented to enable animations in mobile devices
         });
     </script>
 </body>
